web: fix styling on dark mode for band on flow

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -243,6 +243,10 @@ ak-message {
     .pf-c-login__main-footer-links-item-link > img {
         filter: invert(1);
     }
+    .pf-c-login__main-footer-band {
+        background-color: var(--ak-dark-background-lighter);
+        color: var(--ak-dark-foreground);
+    }
     .form-control-static {
         color: var(--ak-dark-foreground);
     }
